--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,11 @@ lerna-debug.log*
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 
+# local
+.vscode/
+cache/
+types/
+
 # Runtime data
 pids
 *.pid
