--- a/src/frontend/tsconfig.json
+++ b/src/frontend/tsconfig.json
@@ -23,6 +23,7 @@
       "@/*": ["./*"],
       "@assets/*": ["./public/assets/*"],
       "@common/*": ["./app/common/*"],
+      "@contracts/*": ["../contract/artifacts/contracts/*"],
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
