🚀 add article post function

--- a/src/frontend/tsconfig.json
+++ b/src/frontend/tsconfig.json
@@ -23,6 +23,7 @@
       "@/*": ["./*"],
       "@assets/*": ["./public/assets/*"],
       "@common/*": ["./app/common/*"],
+      "@lib/*": ["./app/lib/*"],
       "@contracts/*": ["../contract/artifacts/contracts/*"],
     }
   },
